--- a/app/views/redespachos/_form.html.erb
+++ b/app/views/redespachos/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="">
-	<h2>Novo Redespacho</h2>
+	<h2>Redespacho</h2>
 	<%= form_for(@redespacho, :html => { :role => "form", :class =>"form-horizontal div_2048"}) do |r| %>
 		
 		<div class="form-wrapper-group">
@@ -121,13 +121,13 @@
 		  	<div class="form-group">
 				<%= r.label :data_envio, 'Data de envio', :class => "col-sm-1 control-label"%>
 				<div class="col-sm-2">
-					<%= r.text_field :data_envio, :class =>"form-control datepicker Disabled", :disabled => true %>
+					<%= r.date_field :data_envio, :class =>"form-control" %>
 				</div>
 			</div>
 			<div class="form-group">
 				<%= r.label :data_entrega, 'Data de entrega', :class => "col-sm-1 control-label"%>
 				<div class="col-sm-2">
-					<%= r.text_field :data_entrega, :class =>"form-control datepicker Disabled", :disabled => true %>
+					<%= r.date_field :data_entrega, :class =>"form-control" %>
 				</div>
 				<%= r.label :recebido_por, 'Recebido por', :class => "col-sm-1 control-label"%>
 				<div class="col-sm-2">
@@ -136,6 +136,7 @@
 			</div>
 		</div>
 		
-		<%= r.submit 'Salvar', :class => "btn btn-default" %>
+		<%= r.submit 'Salvar', :class => "btn btn-success" %>
+		<%= link_to 'Cancelar', redespachos_path,  :class => "btn btn-danger" %>
 	<% end %>
 </div>
