--- a/app/views/redespachos/_registros.html.erb
+++ b/app/views/redespachos/_registros.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive table-bordered">
 	<%= grid(@registros) do |g|
 		g.column name: 'Ações' do |option|
 			buffer =  link_to('Editar', edit_redespacho_path(option)) + ' | '
@@ -25,12 +25,20 @@
 		end
 		
 		g.column name: 'Quantidade (Volume)', attribute: 'volume'
-		g.column name: 'Peso', attribute: 'peso'
+		g.column name: 'Peso', attribute: 'peso' do |registro|
+			registro.peso.to_s + 'Kg'
+		end
 		#g.column name: 'Fornecedor', attribute: ''
-		g.column name: 'NF Valor', attribute: 'nf_valor'
+		g.column name: 'NF Valor', attribute: 'nf_valor' do |registro|
+		  'R$' + registro.nf_valor.to_s
+		end
 		g.column name: 'NF Número', attribute: 'nf_numero'
-		g.column name: 'Data de envio', attribute: 'data_envio'
-		g.column name: 'Data de entrega', attribute: 'data_entrega'
+		g.column name: 'Data de envio', attribute: 'data_envio' do |registro|
+			registro.data_envio.strftime('%d/%m/%Y') if !registro.data_envio.nil?
+		end
+		g.column name: 'Data de entrega', attribute: 'data_entrega' do |registro|
+			registro.data_entrega.strftime('%d/%m/%Y') if !registro.data_entrega.nil?
+		end
 		g.column name: 'Recebido por', attribute: 'recebido_por'
 		g.column name: 'Jadlog Numero Lista', attribute: 'jadlog_lista_numero'
 		g.column name: 'Jadlog Número de conhecimento', attribute: 'jadlog_conhecimento_numero'
@@ -40,4 +48,3 @@
     end %>
 </div>
 
-<%= link_to 'Novo registro', new_redespacho_path, :class => 'btn btn-success'  %>
