--- a/app/views/redespachos/index.html.erb
+++ b/app/views/redespachos/index.html.erb
@@ -3,6 +3,11 @@
 
 <%= render 'registros' %>
 
+<%= link_to 'Novo registro', new_redespacho_path, :class => 'btn btn-success'  %>
+
 <div class="edit_area">
-	<%= render 'form' %>
+	<%=
+	 #render 'form' 
+	 
+	%>
 </div>
