--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,9 +48,25 @@
 	</div>
 	<div id="painel_conteudo">
 		<br/>
-		<% flash.each do |name, msg| -%>
-	      <%= content_tag :div, msg, class: name %>
-	    <% end %>
+		
+		<% if !flash.empty? %>
+			<%if flash[:error] -%>
+				<div class="panel panel-info">
+		    <% end -%>
+		    <%if flash[:notice] -%>
+				<div class="panel panel-info">
+		    <% end -%>
+		      <div class="panel-heading">
+		        <h3 class="panel-title">Atenção</h3>
+		      </div>
+		      <div class="panel-body">
+		        <% flash.each do |name, msg| -%>
+			      <%= content_tag :div, msg%>
+			    <% end %>
+		      </div>
+		    </div>
+		<% end %>
+		
 	    
 		<%= yield %>
 	</div>
