--- a/app/views/redespachos/_form.html.erb
+++ b/app/views/redespachos/_form.html.erb
@@ -9,6 +9,12 @@
 				<div class="col-sm-2">
 				<%= r.text_field :remetente, :class =>"form-control" %>
 				</div>
+				
+				<%= r.label :remetente_cidade, 'Cidade do remetente', :class => "col-sm-1 control-label"%>
+				<div class="col-sm-2">
+				<%= r.text_field :remetente_cidade, :class =>"form-control" %>
+				</div>
+				
 		  	</div>
 	  	</div>
 	  	<div class="form-wrapper-group">
@@ -28,8 +34,17 @@
 		</div>
 		
 		<div class="form-wrapper-group">
-			<p>Financeiro</p>
+			<p>Valores redespacho</p>
 		  	<div class="form-group">
+		  		
+		  		<%= r.label :valor_frete, 'Valor frete', :class => "col-sm-1 control-label "%>
+				<div class="col-sm-2">
+					<div class="input-group">
+						<span class="input-group-addon">R$</span>
+						<%= r.text_field :valor_frete, :class =>"form-control currency" %>
+					</div>
+				</div>
+		  		
 				<%= r.label :valor_redespacho, 'Valor redespacho', :class => "col-sm-1 control-label "%>
 				<div class="col-sm-2">
 					<div class="input-group">
@@ -38,6 +53,8 @@
 					</div>
 				</div>
 				
+		  	</div>
+		  	<div class="form-group">
 				<%= r.label :valor_comissao, 'Valor comissão', :class => "col-sm-1 control-label"%>
 				<div class="col-sm-2">
 					<div class="input-group">
@@ -46,32 +63,15 @@
 					</div>
 				</div>
 		  	</div>
-		  	<div class="form-group">
-				<%= r.label :valor_liquido, 'Valor liquido', :class => "col-sm-1 control-label"%>
-				<div class="col-sm-2">
-					<div class="input-group">
-						<span class="input-group-addon">R$</span>
-						<%= r.text_field :valor_liquido, :class =>"form-control currency" %>
-					</div>
-				</div>
-				
-				<%= r.label :valor_frete, 'Valor frete', :class => "col-sm-1 control-label "%>
-				<div class="col-sm-2">
-					<div class="input-group">
-						<span class="input-group-addon">R$</span>
-						<%= r.text_field :valor_frete, :class =>"form-control currency" %>
-					</div>
-				</div>
-		  	</div>
 		</div>
 		
 		<div class="form-wrapper-group">
-			<p>Outras informções</p>
+			<p>Outras informações</p>
 		  	<div class="form-group">
 				<%= r.label :volume, 'Volume', :class => "col-sm-1 control-label"%>
 				<div class="col-sm-2">
 					<div class="input-group">
-						<%= r.text_field :volume, :class =>"form-control currency" %>
+						<%= r.text_field :volume, :class =>"form-control" %>
 						<span class="input-group-addon">Un.</span>
 					</div>
 				</div>
