--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -186,7 +186,7 @@ header {
   float: left;
   display: inline-block;
   margin-left: 240px;  
-  .table-responsive {
+  .overflow-x {
     overflow-x: scroll;
   }
 /************************************************************************/
