--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,8 @@
 		<div class="menu">
 			<ul>
 				<li><%= link_to 'Redespacho', redespachos_path %></li>
-			</ul>	
+				<li><%= link_to 'Empresas', empresas_path %></li>
+			</ul>
 		</div>
 	</div>
 	<div id="painel_conteudo">
