--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 		</div>
 		<div class="menu">
 			<ul>
-				<li><%= link_to 'Redespachos', redespachos_path %></li>
+				<li><%= link_to 'Redespachosss', redespachos_path %></li>
 				<li><%= link_to 'Empresas', empresas_path %></li>
 			</ul>
 		</div>
