--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -46,7 +46,7 @@
 			
 			<%= f.label :responsavel, 'Responsavel', :class => "col-sm-2 control-label"%>
 			<div class="col-sm-4">
-			<%= f.email_field :responsavel, :class =>"form-control" %>
+			<%= f.text_field :responsavel, :class =>"form-control" %>
 			</div>			
 	  	</div>
 	</div>
@@ -54,12 +54,39 @@
 		<div class="form-group">
 			<%= f.label :estado, 'Estado', :class => "col-sm-1 control-label"%>
 			<div class="col-sm-3">
-			<%= f.text_field :estado, :class =>"form-control" %>
+			<%= f.select(:estado, options_for_select([['Acre','AC'],
+				['Alagoas','AL'],
+				['Amazonas','AM'],
+				['Amapá','AP'],
+				['Bahia','BA'],
+				['Ceará','CE'],
+				['Distrito Federal','DF'],
+				['Espírito Santo','ES'],
+				['Goiás','GO'],
+				['Maranhão','MA'],
+				['Minas Gerais','MG'],
+				['Mato Grosso do Sul','MS'],
+				['Mato Grosso','MT'],
+				['Pará','PA'],
+				['Paraíba','PB'],
+				['Pernambuco','PE'],
+				['Piauí','PI'],
+				['Paraná','PR'],
+				['Rio de Janeiro','RJ'],
+				['Rio Grande do Norte','RN'],
+				['Rondônia','RO'],
+				['Roraima','RR'],
+				['Rio Grande do Sul','RS'],
+				['Santa Catarina','SC'],
+				['Sergipe','SE'],
+				['São Paulo','SP'],
+				['Tocantins','TO']
+			]),{ }, {:class =>"form-control"}) %>
 			</div>	
 			
 			<%= f.label :cidade, 'Cidade', :class => "col-sm-2 control-label"%>
 			<div class="col-sm-4">
-			<%= f.email_field :cidade, :class =>"form-control" %>
+			<%= f.text_field :cidade, :class =>"form-control" %>
 			</div>			
 	  	</div>
 	</div>
