Corrigido campos do tipo select com a value

--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -80,8 +80,7 @@
 				['Santa Catarina','SC'],
 				['Sergipe','SE'],
 				['São Paulo','SP'],
-				['Tocantins','TO']
-			]),{ }, {:class =>"form-control"}) %>
+				['Tocantins','TO']], selected: @empresa.estado),{ }, {:class =>"form-control"}) %>
 			</div>	
 			
 			<%= f.label :cidade, 'Cidade', :class => "col-sm-2 control-label"%>
