--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -98,6 +98,7 @@
 	  	</div>
 	</div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Salvar', :class => "btn btn-success" %>
+	<%= link_to 'Cancelar', empresas_path,  :class => "btn btn-danger" %>
   </div>
 <% end %>
