Correção campo cnpj

--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -28,7 +28,7 @@
 		<div class="form-group">
 			<%= f.label :cnpj, 'CNPJ', :class => "col-sm-1 control-label"%>
 			<div class="col-sm-3">
-			<%= f.text_field :cnpj, :class =>"form-control", :data =>{:mask =>"999.999.999-99"} %>
+			<%= f.text_field :cnpj, :class =>"form-control", :data =>{:mask =>"99.999.999/9999-99"} %>
 			</div>	
 			
 			<%= f.label :email, 'Email', :class => "col-sm-2 control-label"%>
