--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -1,13 +1,15 @@
 <%= form_for(@empresa, :html => { :role => "form", :class =>"form-horizontal"}) do |f| %>
   <% if @empresa.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@empresa.errors.count, "error") %> prohibited this empresa from being saved:</h2>
-
-      <ul>
-      <% @empresa.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+	  <div class="alert alert-danger" role="alert">
+	  	<strong>Erro salvar empresa:</strong>
+	  	<br/><br/>
+	    <ul>
+	    	<% @empresa.errors.full_messages.each do |message| %>
+	        	<li><%= message %></li>
+	      	<% end %>
+	    </ul>
+	   </div>
     </div>
   <% end %>
   
