--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,8 +42,31 @@
 		</div>
 		<div class="menu">
 			<ul>
-				<li><%= link_to 'Controle de Carga', redespachos_path %></li>
+				<li class="menu_drop">
+					<div class="btn-group">
+				      <button type="button" class="btn btn-link"><%= link_to 'Controle de Carga', redespachos_path %></button>
+				      <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+				        <span class="caret"></span>
+				        <span class="sr-only">Toggle Dropdown</span>
+				      </button>
+				      <ul class="dropdown-menu" role="menu">
+				        <li><%= link_to 'Novo registro', new_redespacho_path %></li>
+				      </ul>
+				    </div>
+				 </li>
 				<li><%= link_to 'Empresas', empresas_path %></li>
+				<li class="menu_drop">
+					<div class="btn-group">
+				      <button type="button" class="btn btn-link"><%= link_to 'Usuarios', users_path %></button>
+				      <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+				        <span class="caret"></span>
+				        <span class="sr-only">Toggle Dropdown</span>
+				      </button>
+				      <ul class="dropdown-menu" role="menu">
+				        <li><%= link_to 'Novo usuário', new_user_path %></li>
+				      </ul>
+				    </div>
+				 </li>
 			</ul>
 		</div>
 	</div>
