Adicionado validações e imagem logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
 	<header>
 		<div class="esquerda">
-		<p class="titulo">Nome do sistema</p>
+		<p class="titulo">Controll Log - Sistema de Controle de Encomendas</p>
 		</div>
 		<div class="direita">
 			<ul id="menu_header">
@@ -27,7 +27,7 @@
 		<div class="info_user">
 			<% if !current_user.nil? %>
 			<span class="img_avatar">
-				<%= image_tag 'fundo_branco.png' %>
+				<%= image_tag 'toledoexpress.jpg' %>
 			</span>
 			<span class="user_name">
 				<%=  current_user.email  %>
