--- a/app/views/redespachos/_form.html.erb
+++ b/app/views/redespachos/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="">
 	<h2>Redespacho</h2>
-	<%= form_for(@redespacho, :html => { :role => "form", :class =>"form-horizontal div_2048"}) do |r| %>
+	<%= form_for(@redespacho, :html => { :role => "form", :class =>"form-horizontal div_2048"}, :data=>{:toggle =>"validator"}) do |r| %>
 		<% if @redespacho.errors.any? %>
 	    <div id="error_explanation">
 		  <div class="alert alert-danger" role="alert">
@@ -19,12 +19,12 @@
 			<div class="form-group">
 				<%= r.label :remetente, 'Remetente', :class => "col-sm-1 control-label"%>
 				<div class="col-sm-2">
-				<%= r.text_field :remetente, :class =>"form-control" %>
+				<%= r.text_field :remetente, :class =>"form-control", :required => true %>
 				</div>
 				
 				<%= r.label :remetente_cidade, 'Cidade do remetente', :class => "col-sm-1 control-label"%>
 				<div class="col-sm-2">
-				<%= r.text_field :remetente_cidade, :class =>"form-control" %>
+				<%= r.text_field :remetente_cidade, :class =>"form-control", :required => true %>
 				</div>
 		  	</div>
 		  	<div class="form-group">
@@ -47,12 +47,12 @@
 		  	<div class="form-group">
 				<%= r.label :destinatario, 'Destinatario', :class => "col-sm-1 control-label"%>
 				<div class="col-sm-2">
-				<%= r.text_field :destinatario, :class =>"form-control" %>
+				<%= r.text_field :destinatario, :class =>"form-control", :required => true %>
 				</div>
 				
 				<%= r.label :destinatario_cidade, 'Cidade', :class => "col-sm-1 control-label"%>
 				<div class="col-sm-2">
-				<%= r.text_field :destinatario_cidade, :class =>"form-control" %>
+				<%= r.text_field :destinatario_cidade, :class =>"form-control", :required => true %>
 				</div>
 				
 		  	</div>
@@ -66,7 +66,7 @@
 				<div class="col-sm-2">
 					<div class="input-group">
 						<span class="input-group-addon">R$</span>
-						<%= r.text_field :valor_frete, :class =>"form-control currency" %>
+						<%= r.text_field :valor_frete, :class =>"form-control currency", :required => true, :placeholder => '0,00' %>
 					</div>
 				</div>
 		  		
@@ -105,7 +105,7 @@
 				<%= r.label :volume, 'Volume', :class => "col-sm-1 control-label"%>
 				<div class="col-sm-2">
 					<div class="input-group">
-						<%= r.text_field :volume, :class =>"form-control" %>
+						<%= r.text_field :volume, :class =>"form-control", :required => true %>
 						<span class="input-group-addon">Un.</span>
 					</div>
 				</div>
@@ -155,7 +155,7 @@
 		  	<div class="form-group">
 				<%= r.label :data_envio, 'Data de envio', :class => "col-sm-1 control-label"%>
 				<div class="col-sm-2">
-					<%= r.date_field :data_envio, :class =>"form-control" %>
+					<%= r.date_field :data_envio, :class =>"form-control", :required => true %>
 				</div>
 			</div>
 			<div class="form-group">
