--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 				<%= image_tag 'toledoexpress.jpg' %>
 			</span>
 			<span class="user_name">
-				<%=  current_user.email  %>
+				<%=  current_user.nome  %>
 			</span>
 			<span class="user_perfil">
 				<%= %>
