--- a/app/views/redespachos/_form.html.erb
+++ b/app/views/redespachos/_form.html.erb
@@ -66,7 +66,7 @@
 				<div class="col-sm-2">
 					<div class="input-group">
 						<span class="input-group-addon">R$</span>
-						<%= r.text_field :valor_frete, :class =>"form-control currency", :required => true, :placeholder => '0,00' %>
+						<%= r.text_field :valor_frete, :class =>"form-control currency"%>
 					</div>
 				</div>
 		  		
