Criado parte de relatórios

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,6 +67,7 @@
 				      </ul>
 				    </div>
 				 </li>
+				 <li><%= link_to 'Relatorios', relatorios_path %></li>
 			</ul>
 		</div>
 	</div>
