--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -428,3 +428,16 @@ span.erro_message {
 /***************************FIM mensagens de erros***********************/
 /************************************************************************/
 
+
+.form-horizontal {
+  h2 {
+    font: bold 20pt/1.5em Tahoma;
+  }
+  .form-wrapper-group {
+    p {
+      font: bold 15pt/1.5em Tahoma;
+      color: #993131;
+    }
+  }
+}
+
