--- a/app/views/relatorios/index.html.erb
+++ b/app/views/relatorios/index.html.erb
@@ -1,5 +1,10 @@
-<h1>Relatórios</h1>
+<h1>Consulta de Relatórios</h1>
 
 
-<%= render 'registros' %>
-<%= render 'filter_external' %>
+
+
+<%= 
+	#render 'filtro_relatorio'
+	render 'registros' 
+    render 'filter_external' 
+%>
