--- a/app/views/redespachos/index.html.erb
+++ b/app/views/redespachos/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Redespachos realizados</h1>
-
+<h1>Controle de Cargas</h1>
+<br/>
+<p><%= link_to 'Novo registro', new_redespacho_path, :class => 'btn btn-success'  %></p>
+<br/>
 
 <%= render 'registros' %>
-
-<%= link_to 'Novo registro', new_redespacho_path, :class => 'btn btn-success'  %>
 
 <div class="edit_area">
 	<%=
