--- a/app/views/relatorios/index.html.erb
+++ b/app/views/relatorios/index.html.erb
@@ -1,5 +1,13 @@
 <h1>Consulta de Relatórios</h1>
 
+	<style>
+		.table, .table > thead > tr > th, .table > tbody > tr > td, .table > tbody > tr > th,.table > tfoot > tr > td {
+		   border-color: black;
+		}
+		.table > thead > tr > th {
+			border-bottom: none;
+		}
+	</style>
 
 
 
